kubernetes/apps/network/envoy-gateway/config/authelia-security-policy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authelia-auth
  namespace: network
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
  extAuth:
    headersToExtAuth:
      - Accept
      - Cookie
      - Authorization
      - Proxy-Authorization
      - X-Forwarded-Proto
    failOpen: false
    http:
      backendRefs:
        - name: authelia
          namespace: default
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
