kubernetes/apps/network/envoy-gateway/config/no-auth-default.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: no-auth-default
  namespace: default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: authelia
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: home-assistant-app
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: nextcloud
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: tvsportsdb-backend
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: tvsportsdb-frontend
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hortusfox-web
