kubernetes/apps/network/envoy-gateway/config/no-auth-network.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: no-auth-network
  namespace: network
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: echo-server
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: https-redirect
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: mta-sts
